--- a/index.html
+++ b/index.html
@@ -7,6 +7,34 @@
     <title>Document</title>
   </head>
   <body>
+    <button id="btn1">Button 1</button>
+    <ul id="list1">
+      <li>element 1</li>
+      <li>element 2</li>
+      <li>element 3</li>
+      <li>element 4</li>
+      <li>element 5</li>
+      <li>element 6</li>
+      <li>element 7</li>
+      <li>element 8</li>
+      <li>element 9</li>
+      <li>element 10</li>
+    </ul>
+
+    <button id="btn2">Button 2</button>
+    <ul id="list2">
+      <li>element 1</li>
+      <li>element 2</li>
+      <li>element 3</li>
+      <li>element 4</li>
+      <li>element 5</li>
+      <li>element 6</li>
+      <li>element 7</li>
+      <li>element 8</li>
+      <li>element 9</li>
+      <li>element 10</li>
+    </ul>
+
     <script src="main.js"></script>
   </body>
 </html>
